--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -70,11 +70,13 @@
       <!-- /.box-body -->
       <div class="box-footer clearfix">
         <ul class="pagination pagination-sm no-margin pull-right">
-          <li><a href="#">«</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">»</a></li>
+          <li><a href="moverA(1)">«</a></li>
+          <li ng-repeat="pag in clientes.paginas" ng-class="{
+            'active' : clientes.pag_actual == pag
+          }">
+            <a ng-click="moverA(pag)">{{ pag }}</a>
+          </li>
+          <li><a href="moverA(clientes.total_paginas)">»</a></li>
         </ul>
       </div>
     </div>
