--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!--- Importaciones de AngularJS -->
   <script src="angular/lib/angular.min.js"></script>
   <script src="angular/lib/angular-route.min.js"></script>
+  <script src="angular/lib/jcs-auto-validate.min.js"></script>
 
   <!-- Controladores -->
   <script src="angular/app.js"></script>
